--- a/src/app/components/dialogs/discussion-dialog/discussion-dialog.component.scss
+++ b/src/app/components/dialogs/discussion-dialog/discussion-dialog.component.scss
@@ -92,7 +92,7 @@ mat-dialog-actions {
                     }
                 }
 
-                &-character, &-quest {
+                &-character, &-quest, &-discussion {
                     margin-top: 3px;
                     width: 250px;
 
