--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -71,7 +71,7 @@ matTooltipPosition="left" [matTooltipDisabled]="!tooltipService.activatedTooltip
                         <option value="objective">{{'role_reward_type_objective' | translate}}</option>
                         <option value="objects" hidden>{{'role_reward_type_object' | translate}}</option>
                         <option value="object">{{'role_reward_type_object' | translate}}</option>
-                        <!--<option value="discuss">Changer de discussion</option>-->
+                        <option value="discussion">{{'role_reward_type_discussion' | translate}}</option>
                         <option value="other">{{'role_reward_type_other' | translate}}</option>
                     </select>                    
                 </div>
@@ -88,6 +88,22 @@ matTooltipPosition="left" [matTooltipDisabled]="!tooltipService.activatedTooltip
                     [matTooltip]="translate.instant('role_reward_type_character_tooltip')"
                     matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips">
                         <option [ngValue]="character" *ngFor="let character of scenario.characters">{{character.name}}</option>
+                    </select>
+                    <button mat-button (click)="removeReward(i)"><mat-icon fontIcon="remove"></mat-icon></button>
+                </div>
+
+                <div class="piece-form-rewards-reward-discussion" *ngIf="reward.type == 'discussion'">
+                    <select [(ngModel)]="getDiscussionReward(i).discussionId" (change)="editTrace($event, 'Reward_['+i+']_discussion')"
+                    [matTooltip]="translate.instant('role_reward_type_discussion_tooltip')"
+                    matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips">
+                        <option [ngValue]="-1" selected disabled>{{'role_reward_type_discussion_placeholder' | translate}}</option>
+                        <ng-container *ngFor="let character of scenario.characters">
+                            <optgroup [label]="character.name" *ngIf="role.characterHasDiscussion(character)">
+                                <ng-container *ngFor="let discussion of role.discussions">
+                                    <option [ngValue]="discussion.ID" *ngIf="discussion.character == character">{{discussion.name}}</option>
+                                </ng-container>
+                            </optgroup>                        
+                        </ng-container>
                     </select>
                     <button mat-button (click)="removeReward(i)"><mat-icon fontIcon="remove"></mat-icon></button>
                 </div>
