--- a/src/app/pieces/tasks/optionnal-task/optionnal-task.component.scss
+++ b/src/app/pieces/tasks/optionnal-task/optionnal-task.component.scss
@@ -314,6 +314,16 @@
                 border-radius: 50%;
                 background-color: white;
                 padding: 4px;
+
+                &-off {
+                    height: 3px;
+                    width: 35px;
+                    background-color: black;
+                    top: 57px;
+                    right: 99px;
+                    position: absolute;
+                    transform: rotateZ(45deg);
+                }
             }
 
             &-symbol {
