--- a/src/app/pieces/tasks/repeat-task/repeat-task.component.scss
+++ b/src/app/pieces/tasks/repeat-task/repeat-task.component.scss
@@ -31,7 +31,7 @@
         }
 
         mat-icon:hover {
-            opacity: 0.75;
+            opacity: 0.65;
         }
 
         &-directioncross {
@@ -77,7 +77,6 @@
     }
 
     &-form {
-        height: 100%;
         padding: 0px 10px 0px 35px;
         position: relative;
         display: flex;
@@ -99,7 +98,7 @@
             border: none;
             border-radius: 20px;
             resize: none;
-            height: 50%;
+            height: 155px;
             padding: 10px;
             background-position: center;
             background-repeat: no-repeat;
@@ -109,7 +108,7 @@
         &-comment {
             transform: scale(1.2);
             position: absolute;
-            bottom: 35px;
+            bottom: 65px;
             left: 50px;
             background-color: white;
             padding: 4px;
@@ -119,7 +118,7 @@
         &-repeat {
             transform: scale(1.2);
             position: absolute;
-            bottom: 35px;
+            bottom: 65px;
             left: 100px;
             background-color: white;
             padding: 4px;
@@ -129,7 +128,7 @@
                 height: 3px;
                 width: 35px;
                 background-color: black;
-                bottom: 50px;
+                bottom: 80px;
                 left: 99px;
                 position: absolute;
                 transform: rotateZ(45deg);
@@ -139,7 +138,7 @@
         &-character {
             transform: scale(1.2);
             position: absolute;
-            bottom: 35px;
+            bottom: 65px;
             left: 150px;
             padding: 4px;
             border-radius: 50%;
@@ -148,12 +147,121 @@
         &-interrupt {
             transform: scale(1.2);
             position: absolute;
-            bottom: 35px;
+            bottom: 65px;
             left: 200px;
             background-color: white;
             padding: 4px;
             border-radius: 50%;
         }
+
+        &-prerequires {
+            width: 100px;
+            height: 50px;
+            background-color: white;
+            border-radius: 10px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 62px;
+        }
+    }
+
+    &-prerequires {
+        position: absolute;
+        width: 375px;
+        height: 150px;
+        background-color: #f7f7f7;
+        z-index: -1;
+        bottom: 120px;
+        right: 20px;
+        border: solid black 1px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        transition: transform 0.5s ease;
+        border-left: none;
+        display: flex;
+        flex-direction: row;
+        padding-left: 2px;
+
+        &-title {
+            margin-left: auto;
+            margin-right: auto;
+            font-family: 'Glacial Indifference Bold';
+            font-size: 13px;
+        }
+
+        &-form {
+            display: flex;
+            flex-direction: column;
+            overflow-x: hidden;
+            overflow-y: auto;
+        }
+
+        &-prerequires {
+            position: relative;
+            border-right: solid #a3a3a3 1px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 50%;
+            height: 90%;
+            display: flex;
+            flex-direction: column;
+        }
+
+        &-ressources {
+            width: 50%;
+            height: 90%;
+            border-bottom-right-radius: 10px;
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
+            border-bottom-left-radius: 10px;
+            display: flex;
+            flex-direction: column;
+
+            &-element {
+                display: flex;
+                flex-direction: row;
+                margin-top: 5px;
+
+                &-checkbox {
+                    position: relative;
+                    width: 50%;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                }
+
+                &-quantity {
+                    position: relative;
+                    width: 50%;
+                    display: flex;
+                    margin-right: 10px;
+                    justify-content: flex-end;
+
+                    input {
+                        width: 20px;
+                        border: none;
+                        border-radius: 10px;
+                        text-align: center;
+                    }
+
+                    select {
+                        width: 40px;
+                        background-color: white;
+                        border: none;
+                        border-radius: 10px;
+                        margin-right: 5px;
+                    }
+                }
+            }
+        }
+    }
+
+    &-prerequires.show {
+        transform: translateX(100%);
+        padding-left: 27px;
     }
 }
 
