--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,3 +100,49 @@ $highlight-color: #009b00;
     bottom: 0px;
     border: 1px solid black;
 }
+
+.snackbar-fail {
+    background-color: #de3e44;
+    color: white;
+    box-shadow: 0px 0px 15px 5px #de3e44;
+    text-align: center;
+    white-space: pre-wrap;
+    text-align: center;
+    span {
+        font-family: 'Glacial Indifference', sans-serif;
+        font-size: 16px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+.snackbar-success {
+    background-color: #1ba345;
+    color: white;
+    box-shadow: 0px 0px 15px 5px #1ba345;
+    text-align: center;
+    white-space: pre-wrap;
+    text-align: center;
+    span {
+        font-family: 'Glacial Indifference', sans-serif;
+        font-size: 16px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+.snackbar-warning {
+    background-color: #ffa808;
+    color: white;
+    box-shadow: 0px 0px 15px 5px #ffa808;
+    text-align: center;
+    white-space: pre-wrap;
+    text-align: center;
+    span {
+        font-family: 'Glacial Indifference', sans-serif;
+        font-size: 16px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
