fix icons placement on increase task size

--- a/src/app/pieces/tasks/annexe-task/annexe-task.component.scss
+++ b/src/app/pieces/tasks/annexe-task/annexe-task.component.scss
@@ -248,7 +248,7 @@
                 transform: scale(1.2);
                 position: absolute;
                 top: 8px;
-                right: 5%;
+                right: 20px;
                 background-color: white;
                 border-radius: 50%;
                 padding: 4px;
@@ -258,7 +258,7 @@
                 transform: scale(1.2);
                 position: absolute;
                 top: 42px;
-                right: 5%;
+                right: 20px;
                 background-color: white;
                 border-radius: 50%;
                 padding: 4px;
@@ -459,7 +459,7 @@
             &-interrupt {
                 transform: scale(1.2);
                 position: absolute;
-                right: 30%;
+                right: 120px;
                 bottom: 25px;
                 border-radius: 50%;
                 background-color: white;
@@ -469,7 +469,7 @@
             &-character {
                 transform: scale(1.2);
                 position: absolute;
-                left: 50%;
+                right: 165px;
                 bottom: 25px;
                 border-radius: 50%;
                 padding: 4px;
