--- a/src/app/pieces/tasks/final-task/final-task.component.scss
+++ b/src/app/pieces/tasks/final-task/final-task.component.scss
@@ -289,7 +289,7 @@
                 transform: scale(1.2);
                 position: absolute;
                 top: 8px;
-                right: 25%;
+                right: 100px;
                 border-radius: 50%;
                 background-color: white;
                 padding: 4px;
@@ -299,7 +299,7 @@
                 transform: scale(1.2);
                 position: absolute;
                 top: 42px;
-                right: 25%;
+                right: 100px;
                 border-radius: 50%;
                 background-color: white;
                 padding: 4px;
@@ -504,7 +504,7 @@
         &-interrupt {
             transform: scale(1.2);
             position: absolute;
-            right: 30%;
+            right: 120px;
             bottom: 25px;
             border-radius: 50%;
             background-color: white;
@@ -514,7 +514,7 @@
         &-character {
             transform: scale(1.2);
             position: absolute;
-            left: 50%;
+            right: 165px;
             bottom: 25px;
             border-radius: 50%;
             padding: 4px;
