--- a/src/app/pieces/tasks/task/task.component.scss
+++ b/src/app/pieces/tasks/task/task.component.scss
@@ -297,7 +297,7 @@
                 transform: scale(1.2);
                 position: absolute;
                 top: 8px;
-                right: 25%;
+                right: 100px;
                 border-radius: 50%;
                 background-color: white;
                 padding: 4px;
@@ -307,7 +307,7 @@
                 transform: scale(1.2);
                 position: absolute;
                 top: 42px;
-                right: 25%;
+                right: 100px;
                 border-radius: 50%;
                 background-color: white;
                 padding: 4px;
@@ -510,7 +510,7 @@
             &-interrupt {
                 transform: scale(1.2);
                 position: absolute;
-                right: 30%;
+                right: 120px;
                 bottom: 25px;
                 border-radius: 50%;
                 background-color: white;
@@ -520,7 +520,7 @@
             &-character {
                 transform: scale(1.2);
                 position: absolute;
-                left: 50%;
+                right: 165px;
                 bottom: 25px;
                 border-radius: 50%;
                 padding: 4px;
